# Robotics

./: INSTRUCTIONS.md  README.md
project1/: CMakeLists.txt  cmake2.txt  package.xml
project1/cfg/: parameters.cfg
project1/include/: data.h
project1/launch/: project1.launch
project1/msg/: StampedWheelRPM.msg
project1/src/: calibration.cpp  dynamic_reconfigure.cpp  integration_mode.cpp  odom_pub.cpp  reset_odom.cpp  service.cpp  tf2.cpp  transform_manager.cpp  vel_odom_pub.cpp  vel_pub.cpp  velocity_calc.cpp  wheelRPM_pub.cpp
project1/srv/: Reset.srv
